unpackaged/main/default/objects/Account_Team_Assignment__c/Account_Team_Assignment__c.object-meta.xml
<CustomObject>
    <description>This object will be used to save rules used to insert Business Entity teams.</description>
    <label>Account Team Assignment</label>
    <nameField>
        <displayFormat>ATA-{0000}</displayFormat>
        <label>Account Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Team Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>