unpackaged/main/default/objects/Account_Team_Assignment__c/fields/Assignment_Method__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Method__c</fullName>
    <description>By what method will the team member be assigned</description>
    <label>Assignment Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Blue Territory</fullName>
            </value>
            <value>
                <fullName>Market Segment &amp; County</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>