unpackaged/main/default/objects/Account_Team_Assignment__c/fields/BC_Rep_Code__c.field-meta.xml
<CustomField>
    <fullName>BC_Rep_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Blue Territory Code</label>
    <length>25</length>
    <type>Text</type>
</CustomField>