unpackaged/main/default/objects/Account_Team_Assignment__c/fields/Blue_Partner__c.field-meta.xml
<CustomField>
    <fullName>Blue_Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Blue Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Team Assignments</relationshipLabel>
    <relationshipName>Account_Assignments</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>