unpackaged/main/default/objects/Account_Team_Assignment__c/fields/County__c.field-meta.xml
<CustomField>
    <fullName>County__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>County</label>
    <referenceTo>County__c</referenceTo>
    <relationshipName>Account_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>