unpackaged/main/default/objects/Account_Team_Assignment__c/fields/Group_Segment__c.field-meta.xml
<CustomField>
    <fullName>Group_Segment__c</fullName>
    <label>Group Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Segment</valueSetName>
    </valueSet>
</CustomField>