unpackaged/main/default/objects/Account_Team_Assignment__c/fields/Team_Role__c.field-meta.xml
<CustomField>
    <fullName>Team_Role__c</fullName>
    <description>Values in this picklist must exactly match values in the Account Team role picklist, or the trigger to assign account team will fail.</description>
    <label>Team Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Manager</fullName>
            </value>
            <value>
                <fullName>AM Management</fullName>
            </value>
            <value>
                <fullName>Sales Executive</fullName>
            </value>
            <value>
                <fullName>Sales Management</fullName>
            </value>
            <value>
                <fullName>Sales Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>