unpackaged/main/default/objects/Account_Team_Assignment__c/validationRules/Blue_Partner_must_be_Partner_Type.validationRule-meta.xml
<ValidationRule>
    <fullName>Blue_Partner_must_be_Partner_Type</fullName>
    <active>true</active>
    <description>Blue Partner must be Partner Type</description>
    <errorConditionFormula>Blue_Partner__r.RecordType.DeveloperName != &#39;Partner&#39;</errorConditionFormula>
    <errorDisplayField>Blue_Partner__c</errorDisplayField>
    <errorMessage>Blue Partner must be of Partner Record Type</errorMessage>
</ValidationRule>