unpackaged/main/default/objects/Account_Team_Assignment__c/listViews/All_Records.listView-meta.xml
<ListView>
    <fullName>All_Records</fullName>
    <columns>NAME</columns>
    <columns>Blue_Partner__c</columns>
    <columns>Assignment_Method__c</columns>
    <columns>BC_Rep_Code__c</columns>
    <columns>County__c</columns>
    <columns>Group_Segment__c</columns>
    <columns>Team_Role__c</columns>
    <columns>User__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>