unpackaged/main/default/objects/Account_Team_Assignment__c/listViews/County.listView-meta.xml
<ListView>
    <fullName>County</fullName>
    <columns>NAME</columns>
    <columns>Assignment_Method__c</columns>
    <columns>Blue_Partner__c</columns>
    <columns>County__c</columns>
    <columns>Group_Segment__c</columns>
    <columns>Team_Role__c</columns>
    <columns>User__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>County__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>County</label>
</ListView>