unpackaged/main/default/objects/Account_Team_Assignment__c/listViews/Large_Group.listView-meta.xml
<ListView>
    <fullName>Large_Group</fullName>
    <columns>NAME</columns>
    <columns>Assignment_Method__c</columns>
    <columns>Group_Segment__c</columns>
    <columns>BC_Rep_Code__c</columns>
    <columns>County__c</columns>
    <columns>Team_Role__c</columns>
    <columns>User__c</columns>
    <columns>Blue_Partner__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Group_Segment__c</field>
        <operation>equals</operation>
        <value>Large</value>
    </filters>
    <label>Large Group</label>
</ListView>